# Boop.nvim

./: .gitignore  Cargo.toml  LICENSE  README.md  boop-prototype.vim  build.rs  lib.rs
.github/workflows/: rust.yml
autoload/: boop.vim
autoload/boop/: floating.vim  neovim.vim  oldvim.vim  util.vim
data/: fyi.zoey.Boop-GTK.metainfo.xml
install_scripts/: boop-nvim-build.bat  boop-nvim-build.sh  boop-nvim-install.bat  boop-nvim-install.sh
plugin/: boop.vim
src/: cli.rs  executor.rs  lib.rs  main.rs  scriptmap.rs  util.rs
