[package]
name = "boop"
build = "build.rs"
version = "0.1.0-alpha"
authors = ["George Matter"]
edition = "2018"
description = """A text-transform engine using javascript built into Boop.vim.

Inspired by @IvanMathy's Boop. Thanks to @zoeyfyi for this initial rust implementation.
"""
license = "MIT"
homepage = "https://github.com/gmvi/boop-cli/"
repository = "https://github.com/gmvi/boop-cli/"
keywords = ["linux", "javascript"]
exclude = [
]

[profile.dev]
lto = "off"

[lib]
name = "boop"
path = "src/lib.rs"

[[bin]]
name = "boop"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# V8
rusty_v8 = "0.23.0"
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_jsonrc = "0.1"
toml = "0.5"
# Logging
log = "0.4.14"
env_logger = "0.8.3"
# Fuzzy search
fuse-rust = "0.2.0"
# File system
open = "1.7.0"
xdg = "2.2.0"
notify = "5.0.0-pre.6"
config = "0.9"
# Misc utils
lazy_static = "1.4.0"
once_cell = "1.7.2"
rust-embed = { version = "5.9.0", features = ["debug-embed"] }
dirty2 = "0.1.0"
eyre = "0.6.5"
color-eyre = "0.5.11"
crossbeam = "0.8.0"
fs_extra = "1.2.0"
clap = { version = "3", features = ["derive"] }

[dev-dependencies]
tempfile = "3.2.0"
directories = "3.0" # TODO: remove

[build-dependencies]
clap = "3"
clap_complete = "3"
fs_extra = "1.2.0"
