[package]
name = "boop"
version = "0.1.0"
authors = ["George Matter"]
edition = "2018"
description = """A text-transform engine using javascript built into Boop.vim.

Inspired by @IvanMathy's Boop. Credit to @zoeyfyi for the rust code.
"""
license = "MIT"
homepage = "https://github.com/gmvi/boop-rs/"
repository = "https://github.com/gmvi/boop-rs/"
keywords = ["cross-platform", "javascript"]
exclude = [
]

[profile.dev]
lto = "off"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# V8
v8 = "0.84"
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_jsonrc = "0.1"
toml = "0.5"
# Logging
log = "0.4.14"
env_logger = "0.8.3"
# Fuzzy search
fuse-rust = "0.2.0"
# File system
open = "1.7.0"
notify = "=5.0.0-pre.6"
config = "0.9"
# Misc utils
once_cell = "1.7.2"
rust-embed = { version = "5.9.0", features = ["debug-embed"] }
dirty2 = "0.1.0"
eyre = "0.6.5"
color-eyre = "0.5.11"
crossbeam = "0.8.0"
fs_extra = "1.2.0"
home = "0.5.5"
directories = "5.0"
# Pin deps to build on rust 1.66
anstyle = "=1.0.2"
anstyle-parse = "=0.2.1"

[dev-dependencies]
tempfile = "3.2.0"

[build-dependencies]
fs_extra = "1.2.0"
