[package]
name = "boop-vim"
version = "0.1.0-beta.1"
authors = ["George Matter"]
edition = "2018"
description = """@IvanMathy's Boop as a Neovim plugin. Credit to @zoeyfyi for the rust code."""
license = "MIT"
repository = "https://github.com/gmvi/Boop.nvim/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "boop"
path = "src/main.rs"

[profile.dev]
lto = "off"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# V8
v8 = "0.84"
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_jsonrc = "0.1"
toml = "0.5"
# Logging
log = "0.4.14"
env_logger = "0.8.3"
# Fuzzy search
fuse-rust = "0.2.0"
# File system
open = "1.7.0"
notify = "=5.0.0-pre.6"
config = "0.9"
# Misc utils
once_cell = "1.7.2"
rust-embed = { version = "5.9.0", features = ["debug-embed"] }
dirty2 = "0.1.0"
eyre = "0.6.5"
color-eyre = "0.5.11"
crossbeam = "0.8.0"
fs_extra = "1.3"
home = "0.5"
directories = "5.0"
anstyle = "1.0"
anstyle-parse = "0.2"
# CLI
clap = { version = "=4.2", features = ["derive"] }

[dev-dependencies]
tempfile = "3.2.0"

[build-dependencies]
clap = "=4.2"
clap_complete = "=4.2"
fs_extra = "1.3"
